crucible-concurrency/examples/cbl/infeasible.out.good
Failure for examples/cbl/infeasible.cbl:39:5: error: in main
ASDF
